# univ-oop-prac-2

./: .cspell.json
01/: .mise.toml  pyproject.toml  report.md
01/src/: main.py  utils.py
02/: .cspell.json  comment_from_arata.md  comment_to_nakashima.md  main.py  main_from_nakashima.py  main_original.py  pyproject.toml
02/src/: __init__.py  lecture02_hero.py  lecture02_magician.py  main.py  utils.py
02/src/hw/: lecture02_01.py  lecture02_02.py  lecture02_02_data.xml  lecture02_Hero.csv  lecture02_Weapon.csv
02/tests/: test_lecture02_hero.py  test_lecture02_magician.py
03/: hw.md
04/: .cspell.json  .gitignore  README.md  pyproject.toml
04/src/: ffmpeg_sample.py  lecture04_main.py  paths.py  record.py  save.py
05/: .cspell.json  .gitignore  .mise.toml  hw.md  hw_1.md  main.py  pyproject.toml  requirements.txt
05/my_module/: lecture05_camera_image_capture.py
05/my_module/K24132/: lecture05_camera_image_capture.py
05/src/: lecture05_01.py  main.py  transcribe.py
06/: pyproject.toml
06/src/: K23999愛知太郎.md  main.py  status.json
06/src/hw/: lecture06_01.py
06/src/my_report/: model.py  template_model.py
07/: .cspell.json  requirements.txt
07/src/: main.py  main2.py
07/src/mod/: paths.py  record.py  save.py  state.py  transcribe.py
07/src/widgets/: log.py  record.py
08/: .mise.toml  hw.md  main.py  pyproject.toml
08/static/: index.css  janken.css  uranai.css
08/templates/: index.html  janken_form.html  janken_play.html  uranai_form.html  uranai_result.html
09/: .mise.toml  hw.md
09/backend/: main.py  pyproject.toml
09/frontend/: index.html  script.js  style.css
