[project]
name = "univ-oop-prac-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

# ref: https://zenn.dev/enven/articles/python-ruff-with-vscode
[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",     # undocumented
  "D203",   # one blank line before class
  "D213",   # multi-line summary second line
  "D400",   # first line should end with a period
  "D415",   # first line should be capitalized
  "TD001",  # invalid todo tag
  "TD002",  # missing todo author
  "TD003",  # missing todo link
  "T201",   # print found
  "ERA001", # Found commented-out code
  "PD011",  # pandas use of dot values
  "RUF002",
]
unfixable = [
  "F401", # unused import
  "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6
